[package]
authors = ["arthas168"]
edition = "2018"
name = "rust-weather-cli"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
exitfailure = "0.5.1"
reqwest = {version = "0.11.0", features = ["json"]}
serde = "1.0.114"
serde_derive = "1.0.114"
serde_json = "1.0.56"
structopt = "0.3.15"
tokio = {version = "1.1.1", features = ["full"]}
